# setup-environment-emi-lascano

./: CMakeLists.txt  Doxyfile
include/: logic.h
lib/libdynamic/: CMakeLists.txt
lib/libdynamic/include/: dinamica.h
lib/libdynamic/src/: dinamica.c
lib/libstatic/: CMakeLists.txt
lib/libstatic/include/: estatica.h
lib/libstatic/src/: estatica.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit.c
